# sauce

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.org  pyproject.toml  setup.py
docs/: index.rst  intro.html  requirements.txt
docs/auto/: references.el
docs/source/: _config.yml  api.rst  bibliography.rst  conf.py  example.rst  index.rst  intro.rst  references.bib
docs/source/notebooks/: 241Am_example.ipynb  example_2d_gate.json  example_2d_gate_dsssd.json  map_file.txt  secar_fp_analysis.ipynb
docs/source/notebooks/.ipynb_checkpoints/: secar_fp_analysis-checkpoint.ipynb
sauce/: __init__.py  config.py  detectors.py  eventbuilder.py  filters.py  gates.py  run_handling.py  scalers.py  utils.py
