[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sauce"
authors = [
     {name = "Caleb Marshall", email="camarsha@unc.edu"}
]
version = "2.0.0"
dependencies = [
    "numpy",
    "polars > 0.19",
    "matplotlib"    ,
    "numba",
    "scipy",
    "typing_extensions",
]

[tool.setuptools]
packages = ["sauce"]
